@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v21.11.14-cur, done by cs@nop.
--;-;-;2021-11-14 03:28:14, took 00:07:11, with 100 workers, on 2448 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2021-11-14 05:01:18, took 00:06:47, with 100 workers, on 2448 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
