@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v21.11.14-cur, done by cs@nop.<br/>
-tested: 2021-11-14 03:28:14, took 00:07:11, with 100 workers, on 2448 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2021-11-14 05:01:18, took 00:06:47, with 100 workers, on 2448 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
